--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Arduino CLI
-      uses: arduino/setup-arduino-cli@v1
+      uses: arduino/setup-arduino-cli@v2
       with:
-        version: latest
+        version: "1.x"
 
     - name: Install ESP32 core
       run: |
