--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,35 +14,29 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Arduino CLI
-      uses: arduino/setup-arduino-cli@v1
-      with:
-        version: latest
+      uses: arduino/setup-arduino-cli@v1.3.1
 
     - name: Install ESP32 core
       run: |
         arduino-cli core update-index
         arduino-cli core install esp32:esp32
 
-    - name: Install libraries
+    - name: Install required libraries
       run: |
+        arduino-cli lib update-index
         arduino-cli lib install "AsyncTCP"
         arduino-cli lib install "ESPAsyncWebServer"
-        arduino-cli lib install "TFT_eSPI"
-        arduino-cli lib install "Adafruit GFX Library"
-        arduino-cli lib install "SuplaDevice"
-        mkdir -p $HOME/Arduino/libraries
-        cd $HOME/Arduino/libraries
-        git clone https://github.com/alanswx/ESPAsyncWiFiManager.git
-        git clone https://github.com/ayushsharma82/ElegantOTA.git
+        arduino-cli lib install "ESPAsyncWiFiManager"
+        arduino-cli lib install "AsyncElegantOTA"
 
     - name: Compile sketch
       run: |
-        arduino-cli compile --fqbn esp32:esp32:esp32doit-devkit-v1 esp32_lcd_g4_s2_www_ok
+        arduino-cli compile --fqbn esp32:esp32:esp32doit-devkit-v1 esp32_lcd_g4_s2_www_ok/esp32_lcd_g4_s2_www_ok.ino
         mkdir -p output
         cp ./build/esp32.esp32.esp32doit-devkit-v1/esp32_lcd_g4_s2_www_ok.ino.bin ./output/
 
-    - name: Upload firmware
-      uses: actions/upload-artifact@v4
+    - name: Upload firmware artifact
+      uses: actions/upload-artifact@v3
       with:
         name: firmware
         path: output/
