--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,18 @@ jobs:
         arduino-cli core update-index
         arduino-cli core install esp32:esp32
 
-    - name: Install required libraries
+    - name: Install required libraries from Arduino Library Manager
       run: |
         arduino-cli lib update-index
         arduino-cli lib install "AsyncTCP"
         arduino-cli lib install "ESPAsyncWebServer"
-        arduino-cli lib install "ESPAsyncWiFiManager"
 
-    - name: Install AsyncElegantOTA library from GitHub
+    - name: Install ESPAsyncWiFiManager from GitHub
+      run: |
+        git clone https://github.com/khoih-prog/ESPAsyncWiFiManager.git /tmp/ESPAsyncWiFiManager
+        arduino-cli lib install /tmp/ESPAsyncWiFiManager
+
+    - name: Install AsyncElegantOTA from GitHub
       run: |
         git clone https://github.com/ayushsharma82/AsyncElegantOTA.git /tmp/AsyncElegantOTA
         mkdir -p /tmp/AsyncElegantOTA_lib
