--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,10 @@ jobs:
     - name: Install Arduino CLI
       run: |
         curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
-        export PATH=$PATH:$HOME/.arduino15/bin
-        arduino-cli version
+        echo "$HOME/nawadnianie/bin" >> $GITHUB_PATH
+
+    - name: Check Arduino CLI version
+      run: arduino-cli version
 
     - name: Setup Arduino ESP32 platform
       run: |
